[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/main.gd" type="Script" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]

[sub_resource type="AnimatedTexture" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.437
anchor_right = 1.0
anchor_bottom = 0.437
margin_left = -201.0
margin_top = -23.2
margin_right = -77.0
margin_bottom = 30.8
custom_fonts/font = ExtResource( 2 )
text = "Enter"
icon = SubResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.987
anchor_top = 1.0
anchor_right = 0.987
anchor_bottom = 1.0
margin_left = -261.688
margin_top = -227.0
margin_right = -178.688
margin_bottom = -179.0
custom_fonts/font = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="."]
anchor_left = 1.0
anchor_top = 0.593
anchor_right = 1.0
anchor_bottom = 0.593
margin_left = -394.0
margin_top = -117.8
margin_right = -260.0
margin_bottom = -59.8
custom_fonts/font = ExtResource( 2 )
max_length = 1

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 124.0
margin_top = 254.0
margin_right = 242.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 2 )

[node name="Button2" type="Button" parent="."]
margin_left = 273.0
margin_top = 254.0
margin_right = 384.0
margin_bottom = 308.0
custom_fonts/font = ExtResource( 2 )
text = "Enter"

[node name="Label2" type="Label" parent="."]
margin_left = 192.0
margin_top = 337.0
margin_right = 352.0
margin_bottom = 392.0
custom_fonts/font = ExtResource( 2 )

[node name="Label3" type="Label" parent="."]
margin_left = 99.0
margin_top = 117.0
margin_right = 422.0
margin_bottom = 185.0
custom_fonts/font = ExtResource( 2 )
text = "Enter ASCII Number"

[node name="Label4" type="Label" parent="."]
anchor_left = 0.987
anchor_right = 0.987
margin_left = -363.688
margin_top = 110.0
margin_right = -101.688
margin_bottom = 158.0
custom_fonts/font = ExtResource( 2 )
text = "Enter Character"

[node name="Label5" type="Label" parent="."]
anchor_left = 0.42
anchor_right = 0.728
margin_left = -86.08
margin_top = 24.0
margin_right = 100.528
margin_bottom = 72.0
custom_fonts/font = ExtResource( 2 )
text = "Enter Character or ASCII value"
align = 2

[node name="Button3" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -54.0
margin_top = 2.0
margin_right = -8.0
margin_bottom = 35.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "X"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="focus_entered" from="LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_entered" from="LineEdit2" to="." method="_on_LineEdit2_focus_entered"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
